k8s/tornado-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: tornado
  name: tornado
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
      nodePort: 32143
    - name: "8001"
      port: 8001
      targetPort: 8001
      nodePort: 32144
  selector:
    io.kompose.service: tornado
  type: NodePort
status:
  loadBalancer: {}
