k8s/edu-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: edu-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/edu-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/edu-net: "true"
